[tool.poetry]
name = "ibbycounts"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Ibrahim Saidi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
